Allow multiple hosts and secrets

--- a/roles/greenlight/templates/env.j2
+++ b/roles/greenlight/templates/env.j2
@@ -5,7 +5,7 @@
 #
 #   docker run --rm bigbluebutton/greenlight:v2 bundle exec rake secret
 #
-SECRET_KEY_BASE={{ greenlight_secret }}
+SECRET_KEY_BASE={{ secrets[inventory_hostname].greenlight }}
 
 # The endpoint and secret for your BigBlueButton server.
 # Set these if you are running GreenLight on a single BigBlueButton server.
@@ -14,7 +14,7 @@ SECRET_KEY_BASE={{ greenlight_secret }}
 #   bbb-conf --secret
 #
 BIGBLUEBUTTON_ENDPOINT=https://{{ ansible_host }}
-BIGBLUEBUTTON_SECRET={{ bbb_secret }}
+BIGBLUEBUTTON_SECRET={{ secrets[inventory_hostname].bigbluebutton }}
 
 # Google Login Provider (optional)
 #
