Switch to inventory_hostname

--- a/roles/greenlight/templates/env.j2
+++ b/roles/greenlight/templates/env.j2
@@ -13,7 +13,7 @@ SECRET_KEY_BASE={{ secrets[inventory_hostname].greenlight }}
 #
 #   bbb-conf --secret
 #
-BIGBLUEBUTTON_ENDPOINT=https://{{ ansible_host }}
+BIGBLUEBUTTON_ENDPOINT=https://{{ inventory_hostname }}
 BIGBLUEBUTTON_SECRET={{ secrets[inventory_hostname].bigbluebutton }}
 
 # Google Login Provider (optional)
