--- a/roles/bigbluebutton/templates/sipgate_dialplan.xml
+++ b/roles/bigbluebutton/templates/sipgate_dialplan.xml
@@ -3,6 +3,10 @@
 		<action application="answer"/>
 		<action application="sleep" data="500"/>
 		<action application="play_and_get_digits" data="5 5 3 7000 # conference/conf-pin.wav ivr/ivr-that_was_an_invalid_entry.wav pin \d+"/>
+
+		<!-- mask the phone number in the list of participants (xxx-xxx-1234) -->
+		<action application="set_profile_var" data="caller_id_name=${regex(${caller_id_name}|^.*(.{4})$|xxx-xxx-%1)}"/>
+
 		<action application="transfer" data="SEND_TO_CONFERENCE XML public"/>
 	</condition>
 </extension>
